--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
- 
     "pg": "^7.4.3",
-    "save": "^2.3.2",
+    "save": "^2.3.2"
   },
   "devDependencies": {
     "eslint": "^5.2.0",
